Adding Styles for Header and Team section

--- a/index.html
+++ b/index.html
@@ -14,57 +14,63 @@
   </head>
   <body>
     <header>
-      <nav>
-        <a href="#">Header Logo</a>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Information</a></li>
-          <li><a href="#">Contact US</a></li>
-        </ul>
-      </nav>
-      <div class="header-content">
-        <h1>This website is awesome.</h1>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta
-          voluptates ullam tempora ratione libero maxime minima eius eos sint
-          commodi vero quasi veniam animi optio, rem asperiores harum similique
-          adipisci?
-        </p>
-        <button>Sign Up</button>
+      <div class="container">
+        <nav>
+          <a href="#" class="logo">The Project</a>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">The team</a></li>
+            <li><a href="#">Contact US</a></li>
+          </ul>
+        </nav>
+        <div class="header-content">
+          <div class="hero-container">
+            <h1>You want to change your Future?</h1>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta
+              voluptates ullam tempora ratione libero maxime minima eius eos
+              sint commodi vero quasi veniam animi optio, rem asperiores harum
+              similique adipisci?
+            </p>
+            <button>Sign Up</button>
+          </div>
+          <img src="images/hero.jpg" alt="Header image" />
+        </div>
       </div>
-      <img src="#" alt="Header image" />
     </header>
 
     <div class="info">
-      <h2>Our previous clients.</h2>
-      <div class="info-content">
-        <div class="client">
-          <img src="#" alt="client1" />
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias autem
-            reprehenderit cumque velit praesentium totam.
-          </p>
-        </div>
-        <div class="client">
-          <img src="#" alt="client2" />
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias autem
-            reprehenderit cumque velit praesentium totam.
-          </p>
-        </div>
-        <div class="client">
-          <img src="#" alt="client3" />
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias autem
-            reprehenderit cumque velit praesentium totam.
-          </p>
-        </div>
-        <div class="client">
-          <img src="#" alt="client4" />
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias autem
-            reprehenderit cumque velit praesentium totam.
-          </p>
+      <div class="container">
+        <h1>Meet the Project team!</h1>
+        <div class="info-content">
+          <div class="member">
+            <img src="images/Abdu.jpg" alt="team-member1" />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
+              autem reprehenderit cumque velit praesentium totam.
+            </p>
+          </div>
+          <div class="member">
+            <img src="images/David.jpg" alt="team-member2" />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
+              autem reprehenderit cumque velit praesentium totam.
+            </p>
+          </div>
+          <div class="member">
+            <img src="images/Kate.jpeg" alt="team-member3" />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
+              autem reprehenderit cumque velit praesentium totam.
+            </p>
+          </div>
+          <div class="member">
+            <img src="images/james.jpeg" alt="team-member4" />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
+              autem reprehenderit cumque velit praesentium totam.
+            </p>
+          </div>
         </div>
       </div>
     </div>
@@ -83,16 +89,14 @@
       <div class="container">
         <div class="content">
           <h3>Call to action! It's time!</h3>
-          <p>
-            Sign up for our product by clicking that button right over there!
-          </p>
+          <p>Sign up for our product and start changing your life.</p>
         </div>
         <button>Sign up</button>
       </div>
     </div>
 
     <footer>
-      <p>Copyright C The Odin Project 2021</p>
+      <p>Copyright &#169; The Odin Project 2021</p>
     </footer>
   </body>
 </html>
