--- a/index.html
+++ b/index.html
@@ -45,58 +45,54 @@
         <div class="info-content">
           <div class="member">
             <img src="images/Abdu.jpg" alt="team-member1" />
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
-              autem reprehenderit cumque velit praesentium totam.
-            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
           </div>
           <div class="member">
             <img src="images/David.jpg" alt="team-member2" />
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
-              autem reprehenderit cumque velit praesentium totam.
-            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
           </div>
           <div class="member">
             <img src="images/Kate.jpeg" alt="team-member3" />
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
-              autem reprehenderit cumque velit praesentium totam.
-            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
           </div>
           <div class="member">
             <img src="images/james.jpeg" alt="team-member4" />
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
-              autem reprehenderit cumque velit praesentium totam.
-            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
           </div>
         </div>
       </div>
     </div>
 
     <div class="quote">
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
-        praesentium dolore ad asperiores deserunt illo quo repellendus enim, ab
-        nam voluptas architecto iusto ea inventore eaque sint porro, ipsam
-        minus!
-      </p>
-      <p>-Thor, God of Thunder</p>
+      <div class="container">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
+          praesentium dolore ad asperiores deserunt illo quo repellendus enim,
+          ab nam voluptas architecto iusto ea inventore eaque sint porro, ipsam
+          minus!
+        </p>
+        <p class="name">-Thor, God of Thunder</p>
+      </div>
     </div>
 
     <div class="signup">
       <div class="container">
         <div class="content">
-          <h3>Call to action! It's time!</h3>
-          <p>Sign up for our product and start changing your life.</p>
+          <div class="left">
+            <h3>Call to action! It's time!</h3>
+            <p>Sign up for our product and start changing your life.</p>
+          </div>
+          <div class="right">
+            <button>Sign up</button>
+          </div>
         </div>
-        <button>Sign up</button>
       </div>
     </div>
 
     <footer>
-      <p>Copyright &#169; The Odin Project 2021</p>
+      <div class="container">
+        <p>Copyright &#169; The Odin Project 2021</p>
+      </div>
     </footer>
   </body>
 </html>
